add script on /list page

--- a/src/views/list.html
+++ b/src/views/list.html
@@ -36,5 +36,6 @@
       </div><!-- /.container-fluid -->
     </nav>
     <h1>List Page</h1>
+    <script src="/static/list.js"></script>
 </body>
 </html>
