--- a/src/views/index.html
+++ b/src/views/index.html
@@ -38,5 +38,6 @@
       </div><!-- /.container-fluid -->
     </nav>
     <h1>Home Page</h1>
+    <script src="/static/home.js"></script>
 </body>
 </html>
