add /create page

--- a/src/views/create.html
+++ b/src/views/create.html
@@ -31,14 +31,14 @@
         <!-- Collect the nav links, forms, and other content for toggling -->
         <div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
           <ul class="nav navbar-nav">
-            <li class="active"><a href="/">Home</a></li>
+            <li><a href="/">Home</a></li>
             <li><a href="/list">List</a></li>
-            <li><a href="/create">Create</a></li>
+            <li class="active"><a href="/create">Create</a></li>
           </ul>
         </div><!-- /.navbar-collapse -->
       </div><!-- /.container-fluid -->
     </nav>
-    <h1>Home Page</h1>
-    <script src="/static/home.js"></script>
+    <h1>Create Page</h1>
+    <script src="/static/create.js"></script>
 </body>
 </html>
