--- a/src/views/list.html
+++ b/src/views/list.html
@@ -31,6 +31,7 @@
           <ul class="nav navbar-nav">
             <li><a href="/">Home</a></li>
             <li class="active"><a href="/list">List</a></li>
+            <li><a href="/create">Create</a></li>
           </ul>
         </div><!-- /.navbar-collapse -->
       </div><!-- /.container-fluid -->
