add controller for /list page

--- a/src/views/list.html
+++ b/src/views/list.html
@@ -38,6 +38,7 @@
       </div><!-- /.container-fluid -->
     </nav>
     <h1>List Page</h1>
+    <div ng-controller="listPageCtrl"></div>
     <script src="/static/list.js"></script>
 </body>
 </html>
