--- a/src/views/list.html
+++ b/src/views/list.html
@@ -40,9 +40,10 @@
     <h1>List Page</h1>
     <div ng-controller="listPageCtrl">
       {{ userName }}
-      <button ng-click="changeUserName();">CHANGE</button>
-      <div>
-         <input ng-model="userName" />
+      <button ng-click="changeUserName();" type="button" class="btn btn-primary btn-sm">CHANGE</button>
+      <div class="input-group">
+        <span class="input-group-addon" id="basic-addon1">Enter your name:</span>
+        <input ng-model="userName" / type="text" class="form-control" placeholder="Username" aria-describedby="basic-addon1">
       </div>
     </div>
     <script src="/static/list.js"></script>
