centering of headlines

--- a/src/views/list.html
+++ b/src/views/list.html
@@ -37,7 +37,7 @@
         </div><!-- /.navbar-collapse -->
       </div><!-- /.container-fluid -->
     </nav>
-    <h1>List Page</h1>
+    <h1 class="h1 text-center">List Page</h1>
     <div ng-controller="listPageCtrl">
       {{ userName }}
       <button ng-click="changeUserName();" type="button" class="btn btn-primary btn-sm">CHANGE</button>
