--- a/src/views/create.html
+++ b/src/views/create.html
@@ -38,7 +38,7 @@
         </div><!-- /.navbar-collapse -->
       </div><!-- /.container-fluid -->
     </nav>
-    <h1>Create Page</h1>
+    <h1 class="h1 text-center">Create Page</h1>
     <script src="/static/create.js"></script>
 </body>
 </html>
