--- a/src/views/index.html
+++ b/src/views/index.html
@@ -38,7 +38,7 @@
         </div><!-- /.navbar-collapse -->
       </div><!-- /.container-fluid -->
     </nav>
-    <h1>Home Page</h1>
+    <h1 class="h1 text-center">Home Page</h1>
     <script src="/static/home.js"></script>
 </body>
 </html>
