add /delete page

--- a/src/views/create.html
+++ b/src/views/create.html
@@ -34,6 +34,7 @@
             <li><a href="/">Home</a></li>
             <li><a href="/list">List</a></li>
             <li class="active"><a href="/create">Create</a></li>
+            <li><a href="/delete">Delete</a></li>
           </ul>
         </div><!-- /.navbar-collapse -->
       </div><!-- /.container-fluid -->
