--- a/src/views/index.html
+++ b/src/views/index.html
@@ -34,6 +34,7 @@
             <li class="active"><a href="/">Home</a></li>
             <li><a href="/list">List</a></li>
             <li><a href="/create">Create</a></li>
+            <li><a href="/delete">Delete</a></li>
           </ul>
         </div><!-- /.navbar-collapse -->
       </div><!-- /.container-fluid -->
