--- a/src/views/list.html
+++ b/src/views/list.html
@@ -33,6 +33,7 @@
             <li><a href="/">Home</a></li>
             <li class="active"><a href="/list">List</a></li>
             <li><a href="/create">Create</a></li>
+            <li><a href="/delete">Delete</a></li>
           </ul>
         </div><!-- /.navbar-collapse -->
       </div><!-- /.container-fluid -->
