--- a/src/views/list.html
+++ b/src/views/list.html
@@ -56,7 +56,7 @@
           <li ng-repeat="num in numbers">{{ num }}</li>
        </ul>
 
-      <table>
+      <table class="table table-striped table-hover">
           <thead class="text-capitalize">
               <th ng-repeat="item in headers"> {{ item }} </th>
           </thead>
