--- a/src/views/list.html
+++ b/src/views/list.html
@@ -50,6 +50,7 @@
         <span class="input-group-addon" id="basic-addon1">Enter your name:</span>
         <input ng-model="userName" / type="text" class="form-control" placeholder="Username" aria-describedby="basic-addon1">
       </div>
+      <button ng-click="getCard();">Get card from api</button>
     </div>
     <div ng-controller="secondCtrl">
        <ul>
